--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 <body>
   <!-- We will render our React app into a div with an id of 'app' -->
   <!-- We can grab it off the DOM by saing document.getElementById('app'); -->
-  <div id="app"></div>
+  <div class="parent-div" id="app"></div>
 </body>
 </html>
